--- a/bloco6/dia2/resume-form/index.html
+++ b/bloco6/dia2/resume-form/index.html
@@ -24,7 +24,7 @@
             <!-- Name field -->
             <div class="mb-3">
               <label for="name" class="form-label">Nome:</label>
-              <input type="text" name="name" id="name" class="form-control" data-validate-field="name" maxlength="40" required>
+              <input type="text" name="name" id="name" class="form-control" data-validate-field="name" maxlength="40" autofocus required>
             </div>
             <!-- E-mail field -->
             <div class="mb-3">
@@ -34,7 +34,7 @@
             <!-- CPF field -->
             <div class="mb-3">
               <label for="cpf" class="form-label">CPF:</label>
-              <input type="text" name="cpf" id="cpf" maxlength="14" autocomplete="on" class="form-control" required>
+              <input type="text" name="cpf" id="cpf" maxlength="14" autocomplete="on" class="form-control" data-validate-field="cpf"  required>
             </div>
             <!-- Addres field -->
             <div class="mb-3">
@@ -90,7 +90,7 @@
               <input type="text" name="start-date" id="start-date" maxlength="10" autocomplete="off" class="form-control" required>
             </div>
           </fieldset>
-          <button type="submit" class="btn btn-primary">Enviar</button>
+          <button type="submit" class="btn btn-primary me-2">Enviar</button>
           <button type="reset" id="clear-all" class="btn btn-outline-danger">Limpar tudo</button>
         </form>
       </div>
