--- a/bloco6/dia5/index.html
+++ b/bloco6/dia5/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
   <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Media Queries</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Raleway:wght@300;700&display=swap" rel="stylesheet">
