--- a/bloco6/dia5/alice-in-wonderland/exercise2.html
+++ b/bloco6/dia5/alice-in-wonderland/exercise2.html
@@ -12,7 +12,6 @@
 
 <body>
   <div class="container">
-
     <header>
       <h1>Alice's Adventures in Wonderland</h1>
 
@@ -26,37 +25,40 @@
 
     </header>
 
-    <aside class="aside-one">
-      <h2>Chapters</h2>
-      <ul>
-        <li><a href="#chapter-1-down-the-rabbit-hole">I. Down the Rabbit-Hole</a></li>
-        <li>II. The Pool of Tears</li>
-        <li>III. A Caucus-Race and a Long Tale</li>
-        <li>IV. The Rabbit Sends in a Little Bill</li>
-        <li>V. Advice from a Caterpillar</li>
-        <li>VI. Pig and Pepper</li>
-        <li>VII. A Mad Tea-Party</li>
-        <li>VIII. The Queen's Croquet-Ground</li>
-        <li>IX. The Mock Turtle's Story</li>
-        <li>X. The Lobster Quadrille</li>
-        <li>XI. Who Stole the Tarts?</li>
-        <li>XII. Alice's Evidence</li>
-      </ul>
-    </aside>
+    <div class="sidebar">
+      <aside class="aside-one">
+        <h2>Chapters</h2>
+        <ul>
+          <li><a href="#chapter-1-down-the-rabbit-hole">I. Down the Rabbit-Hole</a></li>
+          <li>II. The Pool of Tears</li>
+          <li>III. A Caucus-Race and a Long Tale</li>
+          <li>IV. The Rabbit Sends in a Little Bill</li>
+          <li>V. Advice from a Caterpillar</li>
+          <li>VI. Pig and Pepper</li>
+          <li>VII. A Mad Tea-Party</li>
+          <li>VIII. The Queen's Croquet-Ground</li>
+          <li>IX. The Mock Turtle's Story</li>
+          <li>X. The Lobster Quadrille</li>
+          <li>XI. Who Stole the Tarts?</li>
+          <li>XII. Alice's Evidence</li>
+        </ul>
+      </aside>
 
-    <aside class="aside-two">
-      <h2>Information</h2>
-      <ul>
-        <li>Title: Alice's Adventures in Wonderland</li>
+      <aside class="aside-two">
+        <h2>Information</h2>
+        <ul>
+          <li>Title: Alice's Adventures in Wonderland</li>
 
-        <li>Author: Lewis Carroll</li>
+          <li>Author: Lewis Carroll</li>
 
-        <li>Release Date: June 25, 2008 [EBook #11]</li>
-        <li>Last Updated: July 14, 2014</li>
+          <li>Release Date: June 25, 2008 [EBook #11]</li>
+          <li>Last Updated: July 14, 2014</li>
 
-        <li>Language: English</li>
-      </ul>
-    </aside>
+          <li>Language: English</li>
+        </ul>
+      </aside>
+    </div>
+
 
     <article class="main-content">
       <h2 id="chapter-1-down-the-rabbit-hole">
