--- a/bloco6/dia5/alice-in-wonderland/exercise2.html
+++ b/bloco6/dia5/alice-in-wonderland/exercise2.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Media Query Exercise 2</title>
-
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/normalize.css@8.0.1/normalize.css" />
   <link rel="stylesheet" href="exercise2.css" />
 </head>
