Add counter button

--- a/bloco7/dia1/exercise2-3/index.html
+++ b/bloco7/dia1/exercise2-3/index.html
@@ -8,6 +8,12 @@
   <title>Part II - Exercise 3</title>
 </head>
 <body>
+  <div class="page-container">
+    <div class="counter-container">
+      <div class="counter-display"></div>
+      <button class="counter-button">Update</button>
+    </div>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
