--- a/bloco7/dia1/exercise2-3/index.html
+++ b/bloco7/dia1/exercise2-3/index.html
@@ -5,14 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,400;0,500;0,700;1,100;1,400;1,500;1,700&family=Roboto:ital,wght@0,100;0,400;0,500;0,700;1,100;1,400;1,500;1,700&display=swap" rel="stylesheet">  
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">  
   <link rel="stylesheet" href="style.css">
   <title>Part II - Exercise 3</title>
 </head>
 <body>
   <div class="page-container">
     <div class="counter-container">
-      <div class="counter-display"></div>
+      <div class="counter-display">0</div>
       <button class="counter-button">Update</button>
     </div>
   </div>
