Finish exercise 3 from part 2

--- a/bloco7/dia1/exercise2-3/index.html
+++ b/bloco7/dia1/exercise2-3/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="page-container">
     <div class="counter-container">
-      <div class="counter-display">0</div>
+      <div class="counter-display"></div>
       <button class="counter-button">Update</button>
     </div>
   </div>
