Finish e-reader exercise from day 5.4

--- a/bloco5/dia4/index.html
+++ b/bloco5/dia4/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Newsreader:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
   <title>Exercises 5.4 - E-reader</title>
 </head>
 <body>
@@ -16,11 +17,21 @@
     <aside class="preferences-container">
       <h3 class="section-title">Preferences</h3>
       <ul class="preferences">
-        <li><label for="color-selection">Text Color: </label><input id="color-selection" type='color'></li>
-        <li><label for="background-color-selection">Background Color: </label><input id="background-color-selection" type='color'></li>
+        <li><label for="text-color">Text Color: </label><input type='color' id="color" name="color"></li>
+        <li><label for="background-color">Background Color: </label><input type='color' id="background-color" name="backgroundColor"></li>
+        <li><label for="font-size">Font Size: </label><input type="number" id="font-size" name="fontSize" min="16"></li>
+        <li><label for="line-height">Line Height: </label><input type="number" id="line-height" name="lineHeight" min="1" max="2" step=".1"></li>
+        <li><label for="font-family">Font Family: </label><select id="font-family" name="fontFamily">
+          <option value="Roboto">Roboto</option>
+          <option value="Open Sans">Open Sans</option>
+          <option value="Newsreader">Newsreader</option>
+          <option value="Merriweather">Merriweather</option>
+        </select>
+      </li>
       </ul>
+      <button id="reset-preferences">Reset</button>
     </aside>
-    <main class="reader-container">
+    <main class="reader">
       <h3>Lorem Ipsum</h3>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris molestie venenatis iaculis. Aliquam ut ipsum at nisi elementum iaculis eu et libero. Duis tristique porta vestibulum. Cras et vulputate sem. Integer bibendum, turpis et lobortis ultricies, mauris justo dictum magna, id elementum leo orci non ligula. Ut et turpis ut leo condimentum lacinia eu et turpis. Nullam et tortor hendrerit, convallis risus et, posuere tortor. Maecenas sapien eros, porta at viverra sed, tincidunt et neque. Suspendisse consequat, velit at tincidunt accumsan, velit ante convallis nisl, eu ultricies dolor turpis ut nunc. Nam blandit eu lacus vel egestas.
@@ -36,5 +47,6 @@
   <footer class='footer-container'>
     Made by <a href='https://renatosbispo.github.io/' target='_blank'>Renato Bispo</a>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
