--- a/bloco3/dia4/mantis-shrimp/index.html
+++ b/bloco3/dia4/mantis-shrimp/index.html
@@ -71,6 +71,7 @@
         <h3>Interesting facts</h3>
         <section>
           <h4>A fierce predator</h4>
+          <img src="img/mantis1.jpg" alt="A mantis shrimp starting at the camera.">
           <p>
             The mantis shrimp has two raptorial appendages on the front of its body. These accelerate with the same velocity as a gunshot from a twenty-two caliber rifle, and in less than three-thousandths of a second can strike prey with <strong>1,500 Newtons</strong> of force.
           </p>
@@ -81,6 +82,7 @@
 
         <section>
           <h4>Why so fast?</h4>
+          <img src="img/mantis2.jpg" alt="A mantis shrimp seen from the side">
           <p>
             Their limbs move so quickly the water around them <strong>boils</strong> in a process known as <em>supercavitation</em>.
           </p>
@@ -94,6 +96,7 @@
 
         <section>
           <h4>You're not welcome here</h4>
+          <img src="img/mantis3.png" alt="A close-up frontal view of the mantis shrimp.">
           <p>
             Aquariums don't typically house mantis shrimps because they tend to slaughter every other creature they share a tank with. And also because <strong>they can break aquarium glass.</strong>
           </p>
