--- a/bloco3/dia4/mantis-shrimp/index.html
+++ b/bloco3/dia4/mantis-shrimp/index.html
@@ -101,6 +101,18 @@
             Aquariums don't typically house mantis shrimps because they tend to slaughter every other creature they share a tank with. And also because <strong>they can break aquarium glass.</strong>
           </p>
         </section>
+
+        <section>
+          <h3>References</h3>
+          <ul>
+            <li>
+              <a href="https://en.wikipedia.org/wiki/Mantis_shrimp" target="_blank">https://en.wikipedia.org/wiki/Mantis_shrimp</a>
+            </li>
+            <li>
+              <a href="https://theoatmeal.com/comics/mantis_shrimp" target="_blank">https://theoatmeal.com/comics/mantis_shrimp</a>
+            </li>
+          </ul>
+        </section>
       </section>
     </article>
   </main>
