--- a/bloco3/dia4/mantis-shrimp/index.html
+++ b/bloco3/dia4/mantis-shrimp/index.html
@@ -116,5 +116,8 @@
       <iframe width="560" height="315" src="https://www.youtube.com/embed/E0Li1k5hGBE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </aside>
   </div>
+  <footer>
+    Information compiled by Renato Bispo | 2021
+  </footer>
 </body>
 </html>
